tests/tests/snapshots/test__typescript__reference-serde.snap
---
source: tests/tests/typescript.rs
assertion_line: 1096
expression: output
---
Range<i32>: Range<number>
RangeInclusive<i32>: RangeInclusive<number>
String: string
PathBuf: string
IpAddr: string
Ipv4Addr: string
Ipv6Addr: string
SocketAddr: string
SocketAddrV4: string
SocketAddrV6: string
Cow<'static, str>: string
Cow<'static, i32>: number
Vec<i32>: number[]
Vec<MyEnum>: MyEnum[]
Result<String, i32>: Result<string, number>
Vec<Option<Cow<'static, i32>>>: (number | null)[]
PhantomData<()>: null
PhantomData<String>: null
Infallible: never
Unit1: Unit1
Unit2: Unit2
Unit3: Unit3
Unit4: Unit4
Unit5: Unit5
Unit6: Unit6
Unit7: Unit7
SimpleStruct: SimpleStruct
TupleStruct1: TupleStruct1
TupleStruct3: TupleStruct3
TestEnum: TestEnum
RefStruct: RefStruct
InlinerStruct: InlinerStruct
GenericStruct<i32>: GenericStruct<number>
GenericStruct<String>: GenericStruct<string>
FlattenEnumStruct: FlattenEnumStruct
OverridenStruct: OverridenStruct
HasGenericAlias: HasGenericAlias
EnumMacroAttributes: EnumMacroAttributes
InlineEnumField: InlineEnumField
InlineOptionalType: InlineOptionalType
Rename: Rename
TransparentType: TransparentType
TransparentType2: TransparentType2
TransparentTypeWithOverride: TransparentTypeWithOverride
HashMap<BasicEnum, ()>: Partial<{ [key in BasicEnum]: null }>
HashMap<BasicEnum, i32>: Partial<{ [key in BasicEnum]: number }>
Vec<PlaceholderInnerField>: PlaceholderInnerField[]
EnumReferenceRecordKey: EnumReferenceRecordKey
FlattenOnNestedEnum: FlattenOnNestedEnum
MyEmptyInput: MyEmptyInput
(String): string
ExtraBracketsInTupleVariant: ExtraBracketsInTupleVariant
ExtraBracketsInUnnamedStruct: ExtraBracketsInUnnamedStruct
Vec<MyEnum>: MyEnum[]
InlineTuple: InlineTuple
InlineTuple2: InlineTuple2
Box<str>: string
Box<String>: string
SkippedFieldWithinVariant: SkippedFieldWithinVariant
KebabCase: KebabCase
Issue281<'_>: Issue281
LifetimeGenericStruct<'_, i32>: LifetimeGenericStruct<number>
LifetimeGenericEnum<'_, i32>: LifetimeGenericEnum<number>
RenameWithWeirdCharsField: RenameWithWeirdCharsField
RenameWithWeirdCharsVariant: RenameWithWeirdCharsVariant
RenamedFieldKeys: RenamedFieldKeys
RenamedVariantWithSkippedPayload: RenamedVariantWithSkippedPayload
type_type::Type: Type
ActualType: ActualType
SpectaTypeOverride: SpectaTypeOverride
ContainerTypeOverrideStruct: ContainerTypeOverrideStruct
ContainerTypeOverrideEnum: ContainerTypeOverrideEnum
ContainerTypeOverrideGeneric<Box<dyn Any>>: ContainerTypeOverrideGeneric
ContainerTypeOverrideToGeneric<i32>: ContainerTypeOverrideToGeneric<number>
ContainerTypeOverrideTuple: ContainerTypeOverrideTuple
ContainerTypeOverrideTupleGeneric<i32>: ContainerTypeOverrideTupleGeneric<number>
InvalidToValidType: InvalidToValidType
TupleStruct: TupleStruct
TupleStructWithRep: TupleStructWithRep
GenericTupleStruct<String>: GenericTupleStruct<string>
BracedStruct: BracedStruct
Struct: StructNew
Struct2: Struct2
Enum: EnumNew
Enum2: Enum2New
Enum3: Enum3New
StructRenameAllUppercase: StructRenameAllUppercase
RenameSerdeSpecialChar: RenameSerdeSpecialChar
EnumRenameAllUppercase: EnumRenameAllUppercase
Recursive: Recursive
RecursiveMapValue: RecursiveMapValue
RecursiveTransparent: RecursiveTransparent
RecursiveInEnum: RecursiveInEnum
NonOptional: NonOptional
OptionalOnNamedField: OptionalOnNamedField
OptionalOnTransparentNamedField: OptionalOnTransparentNamedField
OptionalInEnum: OptionalInEnum
UntaggedVariants: UntaggedVariants
UntaggedVariantsWithoutValue: UntaggedVariantsWithoutValue
UntaggedVariantsWithDuplicateBranches: UntaggedVariantsWithDuplicateBranches
HashMap<String, ()>: { [key in string]: null }
Regular: Regular
HashMap<Infallible, ()>: { [key in never]: null }
HashMap<TransparentStruct, ()>: { [key in TransparentStruct]: null }
HashMap<UnitVariants, ()>: Partial<{ [key in UnitVariants]: null }>
HashMap<UntaggedVariantsKey, ()>: Partial<{ [key in UntaggedVariantsKey]: null }>
ValidMaybeValidKey: ValidMaybeValidKey
ValidMaybeValidKeyNested: ValidMaybeValidKeyNested
MacroStruct: MacroStruct
MacroStruct2: MacroStruct2
MacroEnum: MacroEnum
DeprecatedType: DeprecatedType
DeprecatedTypeWithMsg: DeprecatedTypeWithMsg
DeprecatedTypeWithMsg2: DeprecatedTypeWithMsg2
DeprecatedFields: DeprecatedFields
DeprecatedTupleVariant: DeprecatedTupleVariant
DeprecatedEnumVariants: DeprecatedEnumVariants
CommentedStruct: CommentedStruct
CommentedEnum: CommentedEnum
SingleLineComment: SingleLineComment
NonGeneric: Demo<number, boolean>
HalfGenericA<u8>: Demo<number, boolean>
HalfGenericB<bool>: Demo<number, boolean>
FullGeneric<u8, bool>: Demo<number, boolean>
Another<bool>: Demo<number, boolean>
MapA<u32>: { [key in string]: number }
MapB<u32>: { [key in number]: string }
MapC<u32>: { [key in string]: AGenericStruct<number> }
AGenericStruct<u32>: AGenericStruct<number>
A: A
DoubleFlattened: DoubleFlattened
FlattenedInner: FlattenedInner
BoxFlattened: BoxFlattened
BoxInline: BoxInline
First: First
Second: Second
Third: Third
Fourth: Fourth
TagOnStructWithInline: TagOnStructWithInline
Sixth: Sixth
Seventh: Seventh
Eight: Eight
Ninth: Ninth
Tenth: Tenth
MyEnumTagged: MyEnumTagged
MyEnumExternal: MyEnumExternal
MyEnumAdjacent: MyEnumAdjacent
MyEnumUntagged: MyEnumUntagged
EmptyStruct: EmptyStruct
EmptyStructWithTag: EmptyStructWithTag
AdjacentlyTagged: AdjacentlyTagged
LoadProjectEvent: LoadProjectEvent
ExternallyTagged: ExternallyTagged
Issue221External: Issue221External
InternallyTaggedD: InternallyTaggedD
InternallyTaggedE: InternallyTaggedE
InternallyTaggedF: InternallyTaggedF
InternallyTaggedH: InternallyTaggedH
InternallyTaggedL: InternallyTaggedL
InternallyTaggedM: InternallyTaggedM
Issue221UntaggedSafe: Issue221UntaggedSafe
Issue221UntaggedMixed: Issue221UntaggedMixed
EmptyEnum: EmptyEnum
EmptyEnumTagged: EmptyEnumTagged
EmptyEnumTaggedWContent: EmptyEnumTaggedWContent
EmptyEnumUntagged: EmptyEnumUntagged
SkipOnlyField: SkipOnlyField
SkipField: SkipField
SkipVariant: SkipVariant
SkipUnnamedFieldInVariant: SkipUnnamedFieldInVariant
SkipNamedFieldInVariant: SkipNamedFieldInVariant
TransparentWithSkip: TransparentWithSkip
TransparentWithSkip2: TransparentWithSkip2
TransparentWithSkip3: TransparentWithSkip3
SkipVariant2: SkipVariant2
SkipVariant3: SkipVariant3
SkipStructFields: SkipStructFields
SpectaSkipNonTypeField: SpectaSkipNonTypeField
FlattenA: FlattenA
FlattenB: FlattenB
FlattenC: FlattenC
FlattenD: FlattenD
FlattenE: FlattenE
FlattenF: FlattenF
FlattenG: FlattenG
TupleNested: TupleNested
Generic1<()>: Generic1<null>
GenericAutoBound<()>: GenericAutoBound<null>
GenericAutoBound2<()>: GenericAutoBound2<null>
Container1: Container1
Generic2<(), String, i32>: Generic2<null, string, number>
GenericNewType1<()>: GenericNewType1<null>
GenericTuple<()>: GenericTuple<null>
GenericStruct2<()>: GenericStruct2<null>
InlineGenericNewtype<String>: string
InlineGenericNested<String>: [string, string[], [string, string], { [key in string]: string }, string | null, "Unit" | ({ Unnamed: string }) & { Named?: never } | ({ Named: {
	value: string,
} }) & { Unnamed?: never }]
InlineFlattenGenericsG<()>: InlineFlattenGenericsG<null>
InlineFlattenGenerics: InlineFlattenGenerics
GenericDefault: GenericDefault
ChainedGenericDefault: ChainedGenericDefault
ChainedGenericDefault<String, String>: ChainedGenericDefault
ChainedGenericDefault<i32>: ChainedGenericDefault<number, number>
ChainedGenericDefault<String, i32>: ChainedGenericDefault<string, number>
GenericDefaultSkipped: GenericDefaultSkipped<string>
GenericDefaultSkippedNonType: GenericDefaultSkippedNonType<unknown>
GenericParameterOrderPreserved: GenericParameterOrderPreserved
ConstGenericInNonConstContainer: ConstGenericInNonConstContainer
ConstGenericInConstContainer: ConstGenericInConstContainer
NamedConstGenericContainer: NamedConstGenericContainer
InlineConstGenericContainer: InlineConstGenericContainer
InlineRecursiveConstGenericContainer: InlineRecursiveConstGenericContainer
TestCollectionRegister: TestCollectionRegister
TestCollectionRegister: TestCollectionRegister
specta_typescript::Any: any
specta_typescript::Any<String>: any
specta_typescript::Unknown: unknown
specta_typescript::Unknown<String>: unknown
specta_typescript::Never: never
specta_typescript::Never<String>: never
specta_typescript::Number: number
specta_typescript::Number<i128>: number
specta_typescript::BigInt: bigint
specta_typescript::BigInt<i128>: bigint
